# matcc

./: CMakeLists.txt  LICENSE  README.md  build.sh
src/: actions.c  actions.h  hash_table.c  hash_table.h  instructions.c  instructions.h  lexer.l  main.c  matrix.c  matrix.h  parser.y  quad.c  quad.h  quad_list.c  quad_list.h  symbol.c  symbol.h  symbol_table.c  symbol_table.h  utility.c  utility.h
src/mips/: instruction.c  instruction.h  register_allocation.c  register_allocation.h  symbol_array.c  symbol_array.h  translation.c  translation.h
src/parsing/: actions.c  actions.h  lexer.l  parser.y
tests/: CMakeLists.txt  spim_intro.txt  test.sh
tests/1_invocation/: 13_comments.mcc
tests/2_print/: 21_print_string.mcc  22_print_int.mcc  23_print_float.mcc  24_print_matrix.mcc
tests/3_integer/: 31_integer_declaration.mcc  32_integer_assignation.mcc  33_integer_arithmetic.mcc
tests/4_float/: 41_float_declaration.mcc  42_float_assignation.mcc  43_float_arithmetic.mcc
tests/6_control/: 61_if.mcc  62_if_else.mcc  63_for.mcc  64_while.mcc
